kubernetes-using-tube-cheese/pokemon-deployments.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: pikachu
  labels:
    app: pokemon
    pokemon: pikachu
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pokemon
      task: pikachu
  template:
    metadata:
      labels:
        app: pokemon
        task: pikachu
        version: v0.0.1
    spec:
      containers:
      - name: pokemon
        image: clevercloud/demo-pokemon
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 80
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: mewtwo
  labels:
    app: pokemon
    pokemon: mewtwo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pokemon
      task: mewtwo
  template:
    metadata:
      labels:
        app: pokemon
        task: mewtwo
        version: v0.0.1
    spec:
      containers:
      - name: pokemon
        image: clevercloud/demo-pokemon
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 80
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nidoqueen
  labels:
    app: pokemon
    pokemon: nidoqueen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pokemon
      task: nidoqueen
  template:
    metadata:
      labels:
        app: pokemon
        task: nidoqueen
        version: v0.0.1
    spec:
      containers:
      - name: pokemon
        image: clevercloud/demo-pokemon
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 80
